<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_simple_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_simple_model"
        app:layout_constraintBottom_toTopOf="@id/button_digit_recognition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_digit_recognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_digit_recognition"
        app:layout_constraintBottom_toTopOf="@id/button_firebase_ml_kit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_simple_model" />

    <Button
        android:id="@+id/button_firebase_ml_kit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_firebase_ml_kit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_digit_recognition" />

</androidx.constraintlayout.widget.ConstraintLayout>